--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,41 @@
-language: java
+language: r
+cache: packages
+r_binary_packages:
+  - xml
+  - gplots
+  - tm
+  - wordcloud
+  - rjava
+  - proxy
+r_github_packages:
+  - hadley/devtools
+  - trinker/qdapTools
+  - trinker/qdapRegex
+  - trinker/qdapDictionaries
+  - ropensci/gender
 
 sudo: required
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - sudo add-apt-repository -y ppa:texlive-backports/ppa
-  - ./travis-tool.sh bootstrap
-install:
-  - sh -e /etc/init.d/xvfb start
-  - sudo R CMD javareconf
-  - ./travis-tool.sh install_r_binary xml
-  - ./travis-tool.sh install_r_binary gplots
-  - ./travis-tool.sh install_r_binary tm
-  - ./travis-tool.sh install_r_binary wordcloud
-  - ./travis-tool.sh install_r_binary rjava
-  - ./travis-tool.sh install_r_binary proxy  
-  - ./travis-tool.sh install_github hadley/devtools
-  - ./travis-tool.sh install_github trinker/qdapTools
-  - ./travis-tool.sh install_github trinker/qdapRegex
-  - ./travis-tool.sh install_github trinker/qdapDictionaries
-  - ./travis-tool.sh github_package ropensci/gender
-  - ./travis-tool.sh install_deps
-script: ./travis-tool.sh run_tests
+#before_install:
+#  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+#  - chmod 755 ./travis-tool.sh
+#  - sudo add-apt-repository -y ppa:texlive-backports/ppa
+#  - ./travis-tool.sh bootstrap
+#install:
+#  - sh -e /etc/init.d/xvfb start
+#  - sudo R CMD javareconf
+#  - ./travis-tool.sh install_r_binary xml
+#  - ./travis-tool.sh install_r_binary gplots
+#  - ./travis-tool.sh install_r_binary tm
+#  - ./travis-tool.sh install_r_binary wordcloud
+#  - ./travis-tool.sh install_r_binary rjava
+#  - ./travis-tool.sh install_r_binary proxy  
+#  - ./travis-tool.sh install_github hadley/devtools
+#  - ./travis-tool.sh install_github trinker/qdapTools
+#  - ./travis-tool.sh install_github trinker/qdapRegex
+#  - ./travis-tool.sh install_github trinker/qdapDictionaries
+#  - ./travis-tool.sh github_package ropensci/gender
+#  - ./travis-tool.sh install_deps
+#script: ./travis-tool.sh run_tests
 notifications:
   email:
     on_success: change
@@ -31,4 +45,4 @@ env:
      - R_BUILD_ARGS="--compact-vignettes=gs+qpdf --resave-data=best"
      - R_CHECK_ARGS="--as-cran"
      - DISPLAY=:99.0
-     - BOOTSTRAP_LATEX=1
+#     - BOOTSTRAP_LATEX=1
