--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: r
 cache: packages
 
 before_install:
-  - tlmgr install media9
+  - tlmgr update --all
+#  - tlmgr install media9
 
 r_binary_packages:
   - XML
