--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: r
 cache: packages
 
 before_install:
-  - tlmgr update --all
-#  - tlmgr install media9
+  - tlmgr install media9
+  - tlmgr install ocgx2
 
 r_binary_packages:
   - XML
